Fix issue where talks were rendered behind the banner (again)

--- a/src/components/Container/styles.css
+++ b/src/components/Container/styles.css
@@ -6,6 +6,7 @@
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 64px;
+  z-index: 300;
 }
 
 @media (min-width: 768px) {
