--- a/src/components/Talks/styles.css
+++ b/src/components/Talks/styles.css
@@ -3,7 +3,6 @@
 
 .content {
   justify-content: center;
-  z-index: 300;
 }
 
 @media (max-width: 767px) {
